Opened 3 months ago

Closed 3 months ago

Last modified 3 months ago

#19201 closed bug (fixed)

HaikuDepot missing information on most packages (regression)

Reported by: bbjimmy Owned by: apl-haiku
Priority: normal Milestone: Unscheduled
Component: Applications/HaikuDepot Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by diver)

hrev58283 launch Haikudepot and click the All packages tab.

Most packages only show the icon amd name. Missing are:

Rating
Description
Size
Status
Repository
Version
Date

Attachments (1)

Missing.png (89.0 KB ) - added by bbjimmy 3 months ago.

Download all attachments as: .zip

Change History (7)

by bbjimmy, 3 months ago

Attachment: Missing.png added

comment:1 by diver, 3 months ago

Description: modified (diff)
Summary: HaikuDepot missing information on most packages.HaikuDepot missing information on most packages (regression)
Version: R1/beta5R1/Development

Same issue here.

comment:2 by apl-haiku, 3 months ago

Thanks; I will try to take a look shortly.

comment:3 by apl-haiku, 3 months ago

This seems to have appeared in hrev 58263 after some data model changes I have made. The problem will be resolved in [this](https://review.haiku-os.org/c/haiku/+/8504) PR.

comment:4 by apl-haiku, 3 months ago

Fixed in hrev58287

comment:5 by apl-haiku, 3 months ago

Resolution: fixed
Status: newclosed

comment:6 by bbjimmy, 3 months ago

Indeed, it is working on hrev58287

Note: See TracTickets for help on using tickets.