HaikuDepot: Fix list packages view

Resolves #19201

Change-Id: Iaba3a84aeb2dfafc3512ffea21bb58c548aa3dee
Reviewed-on: https://review.haiku-os.org/c/haiku/+/8504
Haiku-Format: Haiku-format Bot <no-reply+haikuformatbot@haiku-os.org>
Reviewed-by: waddlesplash <waddlesplash@gmail.com>